# raccolta-dati

./: .gitignore  LICENSE  PromtAuftrag.txt  README.md  build_update.ps1  index.html  package-lock.json  package.json  vite.config.ts
.github/workflows/: release.yml
src/: main.ts  styles.css  vite-env.d.ts
src-tauri/: 2  Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src-tauri/src/modules/: ai.rs  config.rs  excel.rs  mod.rs  ui.rs  utils.rs
src/modules/: api.ts  file-manager.ts  grid.ts  settings.ts  state.ts  ui.ts
src/prompts/: PromptAuftrag.txt  PromptRechnung.txt
src/types/: index.ts
