[package]
name = "raccolta-dati"
version = "2.0.5"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "raccolta_dati_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-dialog = "2.6.0"
tauri-plugin-fs = "2.4.4"
tauri-plugin-shell = "2.3.3"
reqwest = { version = "0.12.26", features = ["json"] }
pdf_oxide = "0.3.0"
base64 = "0.22.1"
tokio = { version = "1", features = ["time"] }
umya-spreadsheet = "2.3.3"
chrono = "0.4"
regex = "1"
tauri-plugin-store = "2.4.1"
keyring = { version = "3", features = ["windows-native", "apple-native", "sync-secret-service"] }
keepawake = "0.6.0"
zip = "7.3.0"
tauri-plugin-updater = "2"

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-updater = "2"
